Added API For location

--- a/public/stylesheets/StudentProfile.css
+++ b/public/stylesheets/StudentProfile.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -8,32 +8,52 @@ body {
     align-items: center;
     justify-content: center;
    /* height: 100vh;
-    margin: 0;*/
-  }
+    margin: 0;
+  }*/
   
   .container {
     text-align: center;
   }
   
   input {
-    padding: 8px;
+    padding: 7px;
+    /*color: aqua;*/
     margin-right: 5px;
     border-bottom: 1px solid black;
-    /*border: none;*/
+    border-radius: 5px 5px 0px 0px;
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+   /* border: none;*/
     outline: none;
+    margin: 10px;
+    width: 40%;
+  }
+  label{
+    float: left;
+    margin-left: 100px;
+    margin-top: 20px;
   }
   .editBtn{
     background-color: rgb(26, 25, 25);
     color: white;
     border-radius: 5px;
     padding: 10px 20px 10px 20px;
-    margin: 10px;
+    margin: 10px 10px 10px 100px;
     border: none;
-    float: right;
+   /* float: right;*/
   }
   button {
     padding: 8px;
     cursor: pointer;
+  }
+  .horizontal{
+    width: 90%;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;*/
+    text-align: center;
+    margin: auto;
   }
   
   #saveBtn,#saveGenderBtn, #savelocation{
@@ -55,12 +75,42 @@ body {
     color: white;
   }
 .upperDiv{
-  width: 100%;
-  height: 60%;
+  width: 82%;
+  height: 48vh;
+  float: right;
   background-color:  #555;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }  
+.upperDiv img {
+  padding: auto;
+  margin: auto;
+  border: 2px white solid;
+  border-radius: 10px;
+  margin: auto;
+  padding: auto;
+  cursor: pointer;
+}
+/*.upperDiv h3{
+  margin: 0;
+ /* padding: -20px;
+  color: white;
+}*/
 .parentContainer{
-  width: 75%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 65%;
+  box-shadow: 0 0 10px rgba(94, 90, 90, 0.1);
   background-color: rgb(238, 242, 245);
+  /*margin-top: -50px;
+  margin-right: 300px;
+  margin-left: 20px;*/
+  float: right;
+  display: flex;
+  flex-direction: column;
+}
+.parentContainer h3{
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
 }
