updated student profile page

--- a/views/StudentProfile.ejs
+++ b/views/StudentProfile.ejs
@@ -106,7 +106,7 @@
     <div class="container">
       <label for="website">Website</label>
      <!-- <textarea name="website" id="editableWebsite" disabled></textarea> -->
-      <input type="text" id="editableWebsite" disabled>
+      <input type="text" id="editableWebsite" placeholder="Any blogpost Link" disabled>
       <button class="editBtn" id="editWebsiteBtn" onclick="enableWebsiteEdit()">Edit</button>
       <button id="saveWebsiteBtn" onclick="saveWebsiteChanges()">Save</button>
       <button id="cancelWebsiteBtn" onclick="cancelWebsiteEdit()">Cancel</button>
@@ -114,50 +114,55 @@
     <div class="horizontal">
       <hr>
     </div>
+    <!--............................Github..............................................-->
     <div class="container">
       <label for="github">Github</label>
-      <input type="text" id="editableInput" disabled>
-      <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
-      <button id="saveBtn" onclick="saveChanges()">Save</button>
-      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+      <input type="text" id="editableGithub" placeholder="Your Github Link" disabled>
+      <button class="editBtn" id="editGithubBtn" onclick="enableGithubEdit()">Edit</button>
+      <button id="saveGithubBtn" onclick="saveGithubChanges()">Save</button>
+      <button id="cancelGithubBtn" onclick="cancelGithubEdit()">Cancel</button>
     </div>
     <div class="horizontal">
       <hr>
     </div>
+    <!--...........................LinkedIn...............................................-->
     <div class="container">
       <label for="linkedin">LinedIn</label>
-      <input type="text" id="editableInput" disabled>
-      <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
-      <button id="saveBtn" onclick="saveChanges()">Save</button>
-      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+      <input type="text" id="editableLinkedIn" placeholder="Your LinkedIn Link" disabled>
+      <button class="editBtn" id="editLinkedInBtn" onclick="enableLinkedInEdit()">Edit</button>
+      <button id="saveLinkedInBtn" onclick="saveLinkedInChanges()">Save</button>
+      <button id="cancelLinkedInBtn" onclick="cancelLinkedInEdit()">Cancel</button>
     </div>
     <div class="horizontal">
       <hr>
     </div>
+    <!--................................Twitter...........................................-->
     <div class="container">
       <label for="twitter">Twitter</label>
-      <input type="text" id="editableInput" disabled>
-      <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
-      <button id="saveBtn" onclick="saveChanges()">Save</button>
-      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+      <input type="text" id="editableTwitter" placeholder="Your Twitter Link" disabled>
+      <button class="editBtn" id="editTwitterBtn" onclick="enableTwitterEdit()">Edit</button>
+      <button id="saveTwitterBtn" onclick="saveTwitterChanges()">Save</button>
+      <button id="cancelTwitterBtn" onclick="cancelTwitterEdit()">Cancel</button>
     </div>
     <div class="horizontal">
       <hr>
     </div>
+    <!--...............................Expirences................................................-->
     <h3>Expierences</h3>
     <div class="container">
       <label for="work">Work</label>
-      <input type="text" id="editableInput" disabled>
-      <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
-      <button id="saveBtn" onclick="saveChanges()">Save</button>
-      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+      <input type="text" id="editableWork" placeholder="Your work or expireneces" disabled>
+      <button class="editBtn" id="editWorkBtn" onclick="enableWorkEdit()">Edit</button>
+      <button id="saveWorkBtn" onclick="saveWorkChanges()">Save</button>
+      <button id="cancelWorkBtn" onclick="cancelWorkEdit()">Cancel</button>
     </div>
     <div class="horizontal">
       <hr>
     </div>
+    <!--....................................Education........................................-->
     <div class="container">
       <label for="education">Education</label>
-      <input type="text" id="editableInput" disabled>
+      <input type="text" id="editableInput" placeholder="Add your education" disabled>
       <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
       <button id="saveBtn" onclick="saveChanges()">Save</button>
       <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
@@ -165,9 +170,10 @@
     <div class="horizontal">
       <hr>
     </div>
+    <!--.........................................Skills...........................................-->
     <div class="container">
       <label for="skills">Skills</label>
-      <input type="text" id="editableInput" disabled>
+      <input type="text" id="editableInput" placeholder="Add your skills" disabled>
       <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
       <button id="saveBtn" onclick="saveChanges()">Save</button>
       <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
@@ -175,10 +181,11 @@
     <div class="horizontal">
       <hr>
     </div>
+    <!--.....................................Acadmic Details.........................................-->
     <h3>Academic Details</h3>
     <div class="container">
       <label for="course">Course</label>
-      <input type="text" id="editableInput" disabled>
+      <input type="text" id="editableInput" placeholder="Academic Detail" disabled>
       <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
       <button id="saveBtn" onclick="saveChanges()">Save</button>
       <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
@@ -188,7 +195,7 @@
     </div>
     <div class="container">
       <label for="1stSemCGPA">1st Semester CGPA</label>
-      <input type="text" id="editableInput" disabled>
+      <input type="text" id="editableInput" placeholder="Your CGPA" disabled>
       <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
       <button id="saveBtn" onclick="saveChanges()">Save</button>
       <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
