--- a/public/stylesheets/StudentProfile.css
+++ b/public/stylesheets/StudentProfile.css
@@ -75,7 +75,12 @@ button {
 #saveBtn,
 #saveGenderBtn,
 #savelocation,
-#saveSummaryBtn {
+#saveSummaryBtn,
+#saveWebsiteBtn,
+#saveGithubBtn,
+#saveLinkedInBtn
+#saveWorkBtn
+#saveTwitterBtn {
   display: none;
   background-color: rgb(133, 178, 236);
   color: white;
@@ -88,7 +93,12 @@ button {
 #cancelBtn,
 #cancelGenderBtn,
 #cancellocation,
-#cancelSummaryBtn {
+#cancelSummaryBtn,
+#cancelWebsiteBtn,
+#cancelGithubBtn,
+#cancelLinkedInBtn,
+#cancelWorkBtn,
+#cancelTwitterBtn {
   display: none;
   background-color: rgb(243, 111, 111);
   border: none;
@@ -145,14 +155,12 @@ button {
 
 textarea {
   padding: 7px;
-  /*color: aqua;*/
   margin-right: 5px;
   border-bottom: 1px solid black;
   border-radius: 5px 5px 0px 0px;
   border-top: 0px;
   border-right: 0px;
   border-left: 0px;
-  /* border: none;*/
   outline: none;
   margin: 10px;
   width: 40%;
